tests/out/error/attributes/required.in.bt
struct Foo{
	@required x i32 := 5
}
