tests/out/error/attributes/required.out
tests/out/error/attributes/required.in.bt:2:3 error: @required on field with default value is redundant
